# virtual-display

./: .gitignore  Cargo.toml  README.md  justfile  protocol.fbs  vcpkg.json
IndirectDisplay/: IddSampleDriver.sln
IndirectDisplay/IddSampleDriver/: Direct3DDevice.cpp  Driver.cpp  Driver.h  IddSampleDriver.vcxproj  IddSampleDriver.vcxproj.filters  IndirectDeviceContext.cpp  IndirectMonitorContext.cpp  MonitorClient.cpp  SampleMonitors.h  SwapChainProcessor.cpp  Trace.h  VirtualDisplayIddDriver.inf
cpal-test/: Cargo.toml
cpal-test/src/: main.rs
ffmpeg-simple/: Cargo.toml
ffmpeg-simple/src/: codec.rs  error.rs  lib.rs
ffmpeg-sys/: Cargo.toml  build.rs
ffmpeg-sys/src/: wrapper.h
ffmpeg-test/: Cargo.toml
ffmpeg-test/src/: main.rs
hwcodec-test/: Cargo.toml
hwcodec-test/src/: main.rs  variant.rs
mfx-dispatch/: Cargo.toml
mfx-dispatch-sys/: Cargo.toml  build.rs
mfx-dispatch-sys/src/: wrapper.h
mfx-dispatch/src/: adapter.rs  buffer.rs  builder.rs  error.rs  lib.rs  main.rs  session.rs
nvcodec/: Cargo.toml
nvcodec-sys/: Cargo.toml  build.rs
nvcodec-sys/src/: nvEncodeAPI.h  wrapper.c  wrapper.h
nvcodec/src/: adapter.rs  buffers.rs  config.rs  guid.rs  lib.rs
opus/: Cargo.toml
opus-sys/: Cargo.toml  build.rs
opus/src/: lib.rs
protocol/kotlin/moe/reimu/virtualdisplay/: Audio.kt  CodecData.kt  Command.kt  Configure.kt  CursorImage.kt  CursorPosition.kt  Packet.kt  Timestamp.kt  Video.kt
protocol/rust/: protocol_generated.rs
protocol/ts/moe/reimu/: virtualdisplay.ts
protocol/ts/moe/reimu/virtualdisplay/: audio.ts  codec-data.ts  command.ts  configure.ts  cursor-image.ts  cursor-position.ts  packet.ts  timestamp.ts  video.ts
rd-video-codec/: Cargo.toml
rd-video-codec/src/: lib.rs  qsv.rs
vd-controller/: Cargo.toml
vd-controller/src/: main.rs
vd-driver/: Cargo.toml
vd-driver/src/: adb.rs  app.rs  audio.rs  main.rs  metrics.rs  monitor.rs  utils.rs  variant.rs  win32.rs
vd-driver/src/encoder/: h264_sw.rs  mft.rs  mod.rs
vd-driver/src/server/: http.rs  mod.rs  rtsp.rs  tcp.rs  tcp_custom.rs  webrtc.rs
vd-driver/src/server/webrtc/: audio.rs  mod.rs  video.rs
vd-driver/templates/: base.html  index.html  webrtc.html
web-client/: index.html
windows-mft-encode/: Cargo.toml
windows-mft-encode/src/: adapter.rs  lib.rs
x264/: Cargo.toml
x264-sys/: Cargo.toml  build.rs
x264-sys/src/: lib.rs  wrapper.c
x264/src/: colorspace.rs  data.rs  encoder.rs  image.rs  lib.rs  picture.rs
x264/src/setup/: mod.rs
