[package]
name = "ffmpeg-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
ffmpeg-sys = { path = "../ffmpeg-sys" }
log = "0.4.19"
simple_logger = "4.2.0"

ffmpeg-simple = { path = "../ffmpeg-simple" }
