[package]
name = "mfx-dispatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mfx-dispatch-sys = { path = "../mfx-dispatch-sys" }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
webrtc = "0.6.0"
