[package]
name = "vd-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
windows = { version = "0.44.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Devices_Enumeration_Pnp",
    "Win32_Devices_Properties",
    "Win32_System_IO"
] }
