[package]
name = "vd-driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
once_cell = "1.17.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }


anyhow = { version = "1.0.68", features = ["backtrace"] }
windows = { version = "0.44.0", features = [
    "Win32_Security_Authorization",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Memory",
] }
tokio = { version = "1.24.2", features = ["full"] }
crossbeam = "0.8.2"

# Video
x264 = { path = "../x264" }
dcv-color-primitives = "0.5.1"
mfx-dispatch = { path = "../mfx-dispatch" }

# Audio
opus = { path = "../opus" }
cpal = "0.14.2"

# Transport
webrtc = { version = "0.6.0", optional = true }
# Transport - RTSP
rtp = "0.6.8"
webrtc-media = "0.5.0"
webrtc-util = "0.7.0"

axum = { version = "0.6.4", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
base64 = "0.21.0"
tower-http = { version = "0.3.5", features = ["cors"] }
httparse = "1.8.0"
futures = "0.3.25"
memchr = "2.5.0"
askama = { version = "0.11.1", features = ["serde-json", "with-axum"] }
askama_axum = "0.2.1"

[features]
default = ["webrtc"]
