[package]
name = "windows-mft-encode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
windows = { version = "0.44.0", features = [
    "implement",
    "Win32_Security_Authorization",
    "Win32_Media_MediaFoundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Dxgi",
    "Win32_System_Performance",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com_StructuredStorage",
    "Win32_UI_Shell_PropertiesSystem"
] }
crossbeam = "0.8.2"
